# swim_apps_shared

./: .firebaserc  .flutter-plugins  .gitignore  README.md  SHARED_FIREBASE_OWNERSHIP.md  firebase.json  pubspec.yaml
.ai_context/: swim_apps_shared_area_domain_map.json  swim_apps_shared_areas.json  swim_apps_shared_domain.json  swim_apps_shared_index.json
.fvm/: fvm_config.json
.github/workflows/: check-no-alias-paths.yml  ci-auto-merge.yml  deploy-shared-dev.yml  deploy-shared-prod.yml  validate-shared-infra.yml
firebase_infra/: README.md
firebase_infra/tests/: test_manage_infra.py
firebase_infra/tools/: __init__.py  manage_infra.py  sync_firestore_indexes.py
lib/: auth_service.dart  swim_apps_shared.dart
lib/design/: brand_helper.dart
lib/legal/: policy_gate.dart  policy_models.dart  policy_repository.dart
lib/objects/: analyzer_entitlement_plan.dart  intensity_zones.dart  per_25.dart  race_segment.dart  stroke.dart  swim_analyzer_plan_type.dart  swim_analyzer_subscription.dart
lib/race_analyzes/: race_comparison_page.dart
lib/repositories/: analyzes_repository.dart  entitlement_repository.dart  invite_repository.dart  (+4 more)
python/: pyproject.toml
python/swim_apps_shared/: __init__.py
python/swim_apps_shared/domain/: __init__.py  models.py
python/swim_apps_shared/firestore/: __init__.py  compat.py  guards.py  paths.py
python/tests/: test_compat.py  test_guards.py  test_models.py  test_paths.py
scripts/: check_no_alias_paths.pre-commit.yaml  check_no_alias_paths.py
test/: mocks.dart  mocks.mocks.dart  stroke_resolution_test.dart
(+69 files in other folders)
